force-app/main/default/objects/CPA_home__c/CPA_home__c.object-meta.xml
<CustomObject>
    <label>CPA home</label>
    <nameField>
        <displayFormat>CPA Home - {0000000}</displayFormat>
        <label>CPA Home Provider Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPA homes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>