force-app/main/default/objects/CPA_home__c/fields/CPA_Home_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Location_Address__c</fullName>
    <label>CPA Home Location Address</label>
    <type>TextArea</type>
</CustomField>