force-app/main/default/objects/CPA_home__c/fields/CPA_Home_MD_CHESSIE_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_MD_CHESSIE_Provider_ID__c</fullName>
    <label>CPA Home MD CHESSIE Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>