force-app/main/default/objects/CPA_home__c/fields/CPA_Home_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Provider_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPA Home Provider Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>CPA Home</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPA homes (CPA Home Provider Name)</relationshipLabel>
    <relationshipName>CPA_homes1</relationshipName>
    <type>Lookup</type>
</CustomField>