force-app/main/default/objects/CPA_home__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>CPA homes</relationshipLabel>
    <relationshipName>CPA_homes</relationshipName>
    <type>Lookup</type>
</CustomField>