force-app/main/default/objects/CPA_home__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPA homes</relationshipLabel>
    <relationshipName>CPA_homes</relationshipName>
    <type>Lookup</type>
</CustomField>