force-app/main/default/objects/CPA_home__c/fields/Related_Office_Site__c.field-meta.xml
<CustomField>
    <fullName>Related_Office_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Office/Site</label>
    <referenceTo>CPA_home__c</referenceTo>
    <relationshipLabel>CPA homes</relationshipLabel>
    <relationshipName>CPA_homes</relationshipName>
    <type>Lookup</type>
</CustomField>