force-app/main/default/objects/CPA_home__c/validationRules/Not_Allowed_To_Create_CPA_Home.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Allowed_To_Create_CPA_Home</fullName>
    <active>true</active>
    <description>Not Allowed To Create CPA Home For &apos;RFC (RCC) Contract&apos; contract type.</description>
    <errorConditionFormula>ISPICKVAL(Program__r.Contracts__r.Contract_Type__c , &apos;RFC (RCC) Contract&apos;) &amp;&amp; ISNEW()</errorConditionFormula>
    <errorMessage>If Contract type equals &apos;RFC (RCC) Contract&apos;, then not allowed to create CPA Home.</errorMessage>
</ValidationRule>